# MetaPAC

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_refactored_pipeline.sh
docs/: DATASETS.md  INSTALLATION.md  MODELS.md  TESTING.md
examples/: README.md
examples/configs/: compress_distilbert_sst2.yaml  compress_with_finetuning.yaml  meta_distilbert_sst2.yaml
examples/configs/scenarios/: compress_finetune_kd.yaml  compress_finetune_no_kd.yaml  prune_magnitude_logical_30.yaml  quant_vb_headroom_on.yaml
metapac/: __init__.py  __main__.py
metapac/configs/: README.md  auto_distilbert_sst2_fast.yaml  auto_distilgpt2_imdb_fast.yaml  auto_qwen3_wos_fast.yaml  auto_qwen3_wos_fast_offline.yaml  baseline_finetune.yaml  compress_distilbert_sst2.yaml  compress_with_finetuning.yaml  compress_with_pruning.yaml  feature_extraction.yaml  meta_distilbert_sst2.yaml  strategy_defaults.yaml
metapac/src/: __init__.py  __main__.py  main.py  model_profiles.py  pipeline.py
metapac/src/cli/: build_meta_dataset.py  run_meta.py
metapac/src/compression/: __init__.py  bitpacking.py  dequant.py  evaluate.py  finalize.py  fine_tune.py  graph_surgery.py  io.py  ranking  (+8 more)
metapac/tests/: test_feature_extraction.py  test_quant_trim.py
scripts/: install_metapac.ps1  install_metapac.sh  run_scenarios.py
scripts/utils/: analyze_meta_sweep_directions.py  baseline_finetune_smart_sweep.py  baseline_finetune_sweep.py  baseline_finetune_two_run_sweep.py  baseline_sweep_params_optimum_expand.yaml  baseline_sweep_params_optimum_expand_v2.yaml  cleanup_sweep_models.py  compression_smart_sweep.py  compression_sweep_distilgpt2_imdb.yaml  compression_sweep_distilgpt2_imdb_clustering_only.yaml  meta_train_sweep.py  meta_train_sweep_distilgpt2_imdb.yaml  meta_train_sweep_distilgpt2_imdb_refine10.yaml  monitor_qwen3_wos.sh  recover_sweep.py  run_cluster_head2head.py  run_compression.py  run_meta_qwen3_nooverlap_stage1_sweep.sh
tests/: __init__.py  _smoke_helpers.py  conftest.py  test_dataset_repository_smoke.py  test_export_phase_smoke.py  test_fine_tuning_phase_smoke.py  test_logging_file_output_smoke.py  test_model_handlers.py  test_model_profiles.py  test_pipeline_baseline_handler.py  test_pipeline_baseline_smoke.py  test_pipeline_e2e_smoke.py  test_pipeline_path_layout_smoke.py  test_preparation_smoke.py  test_pruning_phase_smoke.py  test_pruning_selection_policies.py  test_pruning_strategies.py  test_quantization_phase_smoke.py  test_quantized_loader_api.py
(+65 files in other folders)
